# jsonrpc2-objects

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.cfg
jsonrpcobjects/: errors.py  objects.py
src/jsonrpcobjects/: __init__.py  errors.py  jsontypes.py  objects.py
