[tool.poetry]
name = "jsonrpc2-objects"
version = "2.0.12"
description = "A collection of objects for use in JSON-RPC 2.0 implementations."
readme = "README.md"
repository = "https://gitlab.com/mburkard/jsonrpc2-objects"
homepage = "https://gitlab.com/mburkard/jsonrpc2-objects"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "jsonrpcobjects/**/*.py" },
    { include = "jsonrpcobjects/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
