[tool.poetry]
name = "jsonrpc2-objects"
version = "3.0.0"
description = "A collection of objects for use in JSON-RPC 2.0 implementations."
readme = "README.md"
repository = "https://gitlab.com/mburkard/jsonrpc2-objects"
homepage = "https://gitlab.com/mburkard/jsonrpc2-objects"
license = "MIT"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "jsonrpcobjects/**/*.py" },
    { include = "jsonrpcobjects/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
ignore = []

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "dist",
]
line-length = 88
