[metadata]
name = jsonrpc2-objects
version = 1.2.0
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = A collection of objects for use in JSON-RPC 2.0 implementations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/jsonrpc2-objects
classifiers = Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	pydantic~=1.8.2

[options.packages.find]
where = src
